force-app/main/default/objects/Expense_Cash_Allocation__c/Expense_Cash_Allocation__c.object-meta.xml
<CustomObject>
    <label>Expense Cash Allocation</label>
    <nameField>
        <displayFormat>ECA-{000000}-{000}</displayFormat>
        <label>Expense Cash Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Cash Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>