force-app/main/default/objects/Expense_Cash_Allocation__c/fields/Cash_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Cash_Forecast__c</fullName>
    <label>Cash Forecast</label>
    <referenceTo>Cash_Forecast__c</referenceTo>
    <relationshipLabel>Expense Cash Allocations</relationshipLabel>
    <relationshipName>Expense_Cash_Alllocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>