force-app/main/default/objects/Expense_Cash_Allocation__c/fields/Expense_Account__c.field-meta.xml
<CustomField>
    <fullName>Expense_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Account</label>
    <referenceTo>Expense_Account__c</referenceTo>
    <relationshipLabel>Expense Cash Allocations</relationshipLabel>
    <relationshipName>Expense_Cash_Alllocations</relationshipName>
    <type>Lookup</type>
</CustomField>