force-app/main/default/objects/Expense_Cash_Allocation__c/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <formula>Expense_Account__r.Payment_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Account</label>
    <type>Text</type>
</CustomField>