force-app/main/default/objects/Expense_Cash_Allocation__c/fields/Payment_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Id__c</fullName>
    <formula>IF( 
   NOT( ISBLANK(Expense_Account__r.Payment_Account__c) 
   ) , 
   CASESAFEID(Expense_Account__r.Payment_Account__c), 
   CASESAFEID(Wage__r.Compensation__r.Employee__r.Location__r.Payment_Account__c)
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Account Id</label>
    <type>Text</type>
</CustomField>