force-app/main/default/objects/Expense_Cash_Allocation__c/fields/Wage__c.field-meta.xml
<CustomField>
    <fullName>Wage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wage</label>
    <referenceTo>Wages__c</referenceTo>
    <relationshipLabel>Expense Cash Allocations</relationshipLabel>
    <relationshipName>Expense_Cash_Alllocations</relationshipName>
    <type>Lookup</type>
</CustomField>