force-app/main/default/objects/Expense_Cash_Allocation__c/fields/Wage_Cash_Date__c.field-meta.xml
<CustomField>
    <fullName>Wage_Cash_Date__c</fullName>
    <formula>Wage__r.Cash_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wage Cash Date</label>
    <type>Date</type>
</CustomField>