force-app/main/default/objects/Expense_Cash_Allocation__c/fields/Week_End_Date_Gregorian__c.field-meta.xml
<CustomField>
    <fullName>Week_End_Date_Gregorian__c</fullName>
    <formula>CASE(
            MOD( Cash_Date__c - DATE(1900, 1, 7), 7),
            0, Cash_Date__c ,
            1, Cash_Date__c+6,
            2, Cash_Date__c+5,
            3, Cash_Date__c+4,
            4, Cash_Date__c+3,
            5, Cash_Date__c+2,
            6, Cash_Date__c+1,
            null
            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week End Date Gregorian</label>
    <type>Date</type>
</CustomField>